[package]
name = "grit"
version = "0.1.0"
authors = ["Newton Ni <nwtnni@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
byteorder = "1.4"
chrono = "0.4"
env_logger = "0.8"
flate2 = "1.0"
isatty = "0.1"
log = "0.4"
rand = "0.8"
sha1 = "0.6"
structopt = "0.3"
termcolor = "1.1"
